--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/appsettings.json
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\william.jesus\\source\\repos\\Willljdev\\entra-2022-exemplo-web-banco-dados\\Entra21.CSharp.ClinicaVeterinaria\\Entra21.CSharp.ClinicaVeterinaria.Aplicacao\\BancoDados.mdf;Integrated Security=True;Connect Timeout=30"
+    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=\\\\Server\\c#-noturno\\william.jesus\\Desktop\\Exercicio.mdf;Integrated Security=True;Connect Timeout=30"
   },
   "Logging": {
     "LogLevel": {
