--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/appsettings.json
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=\\\\Server\\c#-noturno\\william.jesus\\Desktop\\Exercicio.mdf;Integrated Security=True;Connect Timeout=30"
+    "SqlServer": "Server=(LocalDB)\\MSSQLLocalDB;DataBase=ClinicaVeterinaria"
   },
   "Logging": {
     "LogLevel": {
