Atualização exercício, criação do apagar na tela de raças

--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/appsettings.json
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=(LocalDB)\\MSSQLLocalDB;DataBase=ClinicaVeterinaria"
+    "SqlServer": "Server=(LocalDB)\\MSSQLLocalDB;DataBase=BANCO SISTEMA"
   },
   "Logging": {
     "LogLevel": {
